feat: A to B - Requisito 1